# GBT-Emulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  debug_ops.py
src/: cpu.c  cpu.h  main.c  mmu.c  mmu.h  out  ppu.c  ppu.h  tools.c  tools.h
src/groups/: #branch.c#  #transfer.c#  .#transfer.c  aritmetic.c  aritmetic.c_v2  aritmetic.h  branch.c  branch.h  misc.c  misc.h  prefix.c  prefix.h  transfer.c  transfer.h
